@@ -19,7 +19,7 @@ project = u'acrylamid'
 copyright = u'2012, posativ'
 
 version = '0.3'
-release = '0.3.4'
+release = '0.3.5'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
